--- a/index.html
+++ b/index.html
@@ -15,17 +15,42 @@
        <div id="header-button"> <button>Contact Us</button></div>
        </div>
     </header>   
-    <section>
+    <main>
         <div class="dp"><img src="images/adnan.png" alt=""></div>
 
         <div class="profile">
-            <h3 class="profile-title">My failures of previous year</h3>
+            <h3 class="title">My failures of previous year</h3>
             <p class="profile-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
             <p class="point"> <img src="images/icons/check 1.png" alt="">Contrary to popular belief, is not simply.
                 <p class="point"> <img src="images/icons/check 1.png" alt="">Contrary to popular , is not simply.</p>
                 <p class="point"> <img src="images/icons/check 1.png" alt="">Contrary to popular belief.</p>
                 <p class="point"> <img src="images/icons/check 1.png" alt="">Contrary to popular , is not simply.</p>
                 <p class="point"> <img src="images/icons/check 1.png" alt="">Contrary to popular belief, is not simply.</p>
-    </section>
+            </main>
+            <section>
+                <h3 class="title">My Plans</h3>
+                <div class="my-plans">
+                    <div class="my-plan">
+                        <img src="images/icons/web.png" alt="">
+                        <h4>Web Development</h4>
+                        <p>I want to start</p>
+                    </div>
+                    <div class="my-plan">
+                        <img src="images/icons/js.png" alt="">
+                        <h4>Javascript</h4>
+                        <p>I want to learn</p>
+                    </div>
+                    <div class="my-plan">
+                        <img src="images/icons/youtube.png" alt="">
+                        <h4>YouTube</h4>
+                        <p>I'll have channel</p>
+                    </div>
+                    <div class="my-plan">
+                        <img src="images/icons/ecom.png" alt="">
+                        <h4>Ecommerce</h4>
+                        <p>I want to develop</p>
+                    </div>
+                </div>
+            </section>
 </body>
 </html>
