--- a/index.html
+++ b/index.html
@@ -32,25 +32,30 @@
                 <div class="my-plans">
                     <div class="my-plan">
                         <img src="images/icons/web.png" alt="">
-                        <h4>Web Development</h4>
-                        <p>I want to start</p>
+                        <h4 class="plan">Web Development</h4>
+                        <p class="planning">I want to start</p>
                     </div>
                     <div class="my-plan">
                         <img src="images/icons/js.png" alt="">
-                        <h4>Javascript</h4>
-                        <p>I want to learn</p>
+                        <h4 class="plan">Javascript</h4>
+                        <p class="planning">I want to learn</p>
                     </div>
                     <div class="my-plan">
                         <img src="images/icons/youtube.png" alt="">
-                        <h4>YouTube</h4>
-                        <p>I'll have channel</p>
+                        <h4 class="plan">YouTube</h4>
+                        <p class="planning">I'll have channel</p>
                     </div>
                     <div class="my-plan">
                         <img src="images/icons/ecom.png" alt="">
-                        <h4>Ecommerce</h4>
-                        <p>I want to develop</p>
+                        <h4 class="plan">Ecommerce</h4>
+                        <p class="planning">I want to develop</p>
                     </div>
                 </div>
             </section>
+            <section id="suggestion">
+                <img src="images/gradient1.png" alt="">
+
+            </section>
+
 </body>
 </html>
