--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                         <h4 class="plan">Ecommerce</h4>
                         <p class="planning">I want to develop</p>
                     </div>
-                </div>
-            </section>
+                </div> 
             <section id="suggestion">
-                <img src="images/gradient1.png" alt="">
+             <!--    <img src="images/gradient1.png" alt=""> -->
+                <h3>Awlays keep a positive mindset</h3>
 
             </section>
 
 </body>
-</html>
+</html> 
