--- a/index.html
+++ b/index.html
@@ -52,10 +52,34 @@
                     </div>
                 </div> 
             <section id="suggestion">
-             <!--    <img src="images/gradient1.png" alt=""> -->
-                <h3>Awlays keep a positive mindset</h3>
+                <h3 id="the-suggest">Awlays keep a positive mindset</h3>
+                <button>Call Now</button>
 
             </section>
+            <footer>
+               <div id="footer">
+                <div><h3 id="title">Future</h3>
+                    <p id="title-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    <p class="contact">Email: info@gmail.com</p>
+                    <p class="contact">Phone: 01234567890</p>
+                    <div id="icon">
+                        <img src="images/icons/fb.png" alt="">
+                        <img src="images/icons/twitter.png" alt="">
+                        <img src="images/icons/youtube.png" alt="">
+                    </div>
+
+                </div>
+                <div>
+                    <h4 id="form-title">Subscribe</h4>
+                    <form action="">
+                        <input class="email" type="text" name="email" placeholder="enter your email"><br>
+                        <input class="subscribe" type="button" value="Subscribe">
+                    </form>
+
+                </div>
+               </div>
+               <h4 class="the-end">Developed by AdnaNation</h4>
+            </footer>
 
 </body>
 </html> 
